fix: desktop letterspacing

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -67,7 +67,7 @@
         --ls-h2: -.03644rem;
         --ls-h3: -.02388rem;
 
-        --ls-body: -1.5556rem;
+        --ls-body: -.015556rem;
     }
 }
 
